<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextViewA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/first_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        android:layout_marginLeft="15dp" />
    <EditText
        android:id="@+id/EditTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextViewA"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:layout_marginLeft="15dp"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/TextViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/last_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/EditTextFirstName"/>
    <EditText
        android:id="@+id/EditTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextViewB"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:layout_marginLeft="15dp"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/TextViewC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/marks"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/EditTextLastName"/>
    <EditText
        android:id="@+id/EditTextMarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextViewC"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:hint="@string/enter_marks"
        android:inputType="number"
        android:layout_marginLeft="15dp"
        android:importantForAutofill="no" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/EditTextMarks"
        android:gravity="center_horizontal"
        android:layout_marginRight="15dp">
    <Button
        android:id="@+id/fab"
        android:layout_below="@id/EditTextMarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="Add"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/addicon"
        tools:targetApi="lollipop" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/fab"
        android:layout_below="@id/EditTextMarks"
        android:backgroundTint="@color/black"
        android:layout_marginTop="15dp"
        android:text="View"
        android:layout_alignRight="@id/fab"
        android:id="@+id/ViewButton"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/fab"
            android:layout_below="@id/EditTextMarks"
            android:backgroundTint="@color/black"
            android:layout_marginTop="15dp"
            android:text="Update"
            android:layout_alignRight="@id/fab"
            android:layout_marginLeft="15dp"
            android:id="@+id/UpdateButton"
            />
    </LinearLayout>
</RelativeLayout>